--- a/public/stylesheets/reset.less
+++ b/public/stylesheets/reset.less
@@ -89,6 +89,24 @@
     font-weight: 300;
 }
 
+//Padding-top
+
+.large-padding-top {
+    padding-top: 90px;
+}
+
+.medium-padding-top {
+    padding-top: 60px;
+}
+
+.small-padding-top {
+    padding-top: 30px;
+}
+
+.xsmall-padding-top {
+    padding-top: 15px;
+}
+
 
 //Margin bottom 
 .large-margin-bottom {
