--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,7 +12,7 @@
 						<h1 class="headline text-large hairline landing-text">Brent Scheibelhut</h1>
 						<p class="get-smaller">Developer. Designer. Athlete. Writer.<br> Freelancing At Its Finest.</p>
 					</header>
-					<div class="row">
+					<div class="row landing-ctas">
 						<div class="col-lg-12 small-margin-bottom">
 							<a title="Hire Me" href="#">
 								<button class="cta2 hire blue1"></button>
@@ -42,15 +42,15 @@
 						<div id="feature_1_text" class="col-md-7">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">Design</h1>
-								<p class="body-subheader features">From Web Design to Graphic Design - Brent has done it. Simply put Brent tries to offer unique, engaging designs that take into account both UI and UX. Notably Brent has worked on:</p>
+								<p class="body-subheader features">From Web Design to Graphic Design - Brent has done it. Simply put, Brent tries to offer unique, engaging designs that take into account both UI and UX. Notably Brent's work includes:</p>
 								<ul>
 									<li>Completely customized website design - special emphasis on responsive development</li>
-									<li>Custom email templates, logos, and icons</li>
+									<li>Custom email templates, logos, &#38; icons</li>
 									<li>Graphic designs for adertisments, &#38; interactive PDF's, and website</li>
 								</ul>
 							</header>
 						</div>
-						<div id="feature_1_img" class="col-md-4 features-right features-text-right">
+						<div id="feature_1_img" class="col-md-4 features-right features-text-right feature-img">
 							<img src="/images/utensils.svg" width="300" height="300" alt="Design">
 						</div>
 					</div>
@@ -76,7 +76,7 @@
 								</ul>
 							</header>
 						</div>
-						<div id="feature_2_img" class="col-md-4 features-text-left">
+						<div id="feature_2_img" class="col-md-4 features-text-left feature-img">
 							<img src="/images/development.svg" width="300" height="300" alt="Developement">
 						</div>
 					</div>
@@ -86,16 +86,16 @@
 						<div id="feature_3_text" class="col-md-7">
 							<header class="small-header features-text-left">
 								<h1 class="headline text-small hairline">SEO &#38; Marketing</h1>
-								<p class="body-subheader features">Both of Brent's co-ops, as well as his freelance work, feature marketing driven aspects. Brent has learned the expanse of web driven marketing from email drops to SEO. Brent can help with:</p>
+								<p class="body-subheader features">Both of Brent's co-ops, as well as his freelance work, feature marketing driven aspects. Brent has learned the expanse of web driven marketing, from email drops to SEO. Brent can help with:</p>
 								<ul>
-									<li>Itelligent funnel campaigns set up from experience</li>
+									<li>Intelligent funnel campaigns set up from experience</li>
 									<li>Harnessing the power of social media to engage customers</li>
 									<li>Email drops, targeted advertisement, copy writing &#38; search engine optimization</li>
 									<li>Analytics - especially Google Analytics and KISSMetrics</li>
 								</ul>
 							</header>
 						</div>
-						<div id="feature_3_img" class="col-md-4 features-right features-text-right">
+						<div id="feature_3_img" class="col-md-4 features-right features-text-right feature-img">
 							<img src="/images/bullet.svg" width="300" height="300" alt="SEO and Marketing">
 						</div>
 					</div>
@@ -173,12 +173,7 @@
 				</blockquote>
 				<blockquote id="testimonial2" class="fancy-blockquote transparent">
 					<div class="row small-margin-bottom">
-						<div class="col-md-10">
-							<p>Brent is absolutely wonderful to work with. He’s reliable, takes initiative and is incredibly social media savvy. By truly understanding and studying the specific brand or marketing campaign, he’s able to hone in on the target audience in order to maximize the potential of all social media platforms. Brent is responsive, forward thinking and always eager to find solutions.</p>
-							<small class="text-right">Sam Mednick,</small>
-							<small class="text-right">Founder of Blueprint Coaching</small>
-						</div>
-						<div class="col-md-2">
+						<div class="col-md-2 testimonial-right">
 							<div class="box-round box-huge">
 								<div class="box-dummy"></div>
 								<div class="box-inner">
@@ -187,6 +182,11 @@
 									</a>
 								</div>
 							</div>
+						</div>
+						<div class="col-md-10">
+							<p>Brent is absolutely wonderful to work with. He’s reliable, takes initiative and is incredibly social media savvy. By truly understanding and studying the specific brand or marketing campaign, he’s able to hone in on the target audience in order to maximize the potential of all social media platforms. Brent is responsive, forward thinking and always eager to find solutions.</p>
+							<small class="text-right">Sam Mednick,</small>
+							<small class="text-right">Founder of Blueprint Coaching</small>
 						</div>
 					</div>
 				</blockquote>
@@ -205,11 +205,11 @@
 						<div class="col-md-10">
 							<p>Brent was outstanding.  With a minimum of training he was quickly up and running. He consistently delivered outstanding work across several digital marketing disciplines:</p>
 								<ul class="small-margin-bottom">
-									<li>Writing: Managed the Work.com blog expertly and wrote several well received posts for the Salesforce blog.</li>
-									<li>Social Media: Brent ran the Work.com social media program on his own.  Under Brent's stewardship, the program is delivering great results.  He has good instincts for social media and creating compelling content.</li>
-									<li>Web Design: Brent showed great initiative and completely renovated the Work.com blog.  He sharpened the look, added more features for social sharing, and made the blog even more mobile accessible.</li>
-									<li>Graphic Art: Brent designed graphics and logos for various purposes on a regular basis.  Awesome work, especially on short notice.</li>
-									<li>Operations: Brent was always willing to to help with technical operations and he ensured that our backend reporting was tidy.</li>
+									<li><strong>Writing:</strong> Managed the Work.com blog expertly and wrote several well received posts for the Salesforce blog.</li>
+									<li><strong>Social Media:</strong> Brent ran the Work.com social media program on his own.  Under Brent's stewardship, the program is delivering great results.  He has good instincts for social media and creating compelling content.</li>
+									<li><strong>Web Design:</strong> Brent showed great initiative and completely renovated the Work.com blog.  He sharpened the look, added more features for social sharing, and made the blog even more mobile accessible.</li>
+									<li><strong>Graphic Art:</strong> Brent designed graphics and logos for various purposes on a regular basis.  Awesome work, especially on short notice.</li>
+									<li><strong>Operations:</strong> Brent was always willing to to help with technical operations and he ensured that our backend reporting was tidy.</li>
 								</ul>
 							<small>David Austin,</small>
 							<small>Director of Online Marketing, Salesforce</small>
