--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,97 +1,99 @@
-<footer class="footer">
-	<div class="row">
-		<div class="column">
-			<h4>About Brent</h4>
-			<ol>
-				<li class="nav-item">
-					<a href="/blog" title="Blog">
-						Blog
-					</a>
-				</li>
-				<li class="nav-item">
-					<a href="/company" title="Contact Us">
-						Contact
-					</a>
-				</li>
-				<li class="nav-item">
-					<a href="#" title="LinkedIn">
-						Linked In
-					</a>
-				</li>
-			</ol>
+<footer class="footer section section-footer">
+	<div class="container">
+		<div class="row xsmall-margin-bottom">
+			<div class="col-md-1">
+				<h4>About</h4>
+				<ol>
+					<li class="nav-item">
+						<a href="/blog" title="Blog">
+							Blog
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/company" title="Contact Us">
+							Contact
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" title="LinkedIn">
+							Linked In
+						</a>
+					</li>
+				</ol>
+			</div>
+			<div class="col-md-1">
+				<h4>Resources</h4>
+				<ol>
+					<!--<li class="nav-item">
+						<a href="/pricing" title="Pricing">
+							Pricing
+						</a>
+					</li>-->
+					<li class="nav-item">
+						<a href="#" title="Style Guide">
+							Style Guide
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" title="Dribbble">
+							Dribbble
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" title="Github">
+							Github
+						</a>
+					</li>
+				</ol>
+			</div>
+			<!--<div class="column">
+				<h4>Helpful Links</h4>
+				<ol>
+					<li class="nav-item">
+						<a href="https://roadmunk.zendesk.com/hc/en-us" title="Help">
+							Help
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/security" title="Security">
+							Security
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="/privacy-policy" title="Privacy Policy">
+							Privacy Policy
+						</a>
+					</li>
+				</ol>
+			</div>-->
+			<div class="col-md-1">
+				<h4>Social</h4>
+				<ol>
+					<li class="nav-item">
+						<a href="https://twitter.com/RoadmunkApp" title="Twitter">
+							Twitter
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="https://plus.google.com/+Roadmunkgoogleplus/" title="Google Plus">
+							Google&#43;
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" title="Facebook">
+							Facebook
+						</a>
+					</li>
+				</ol>
+			</div>
 		</div>
-		<div class="column">
-			<h4>Resources</h4>
-			<ol>
-				<!--<li class="nav-item">
-					<a href="/pricing" title="Pricing">
-						Pricing
-					</a>
-				</li>-->
-				<li class="nav-item">
-					<a href="#" title="Style Guide">
-						Style Guide
-					</a>
-				</li>
-				<li class="nav-item">
-					<a href="#" title="Dribbble">
-						Dribbble
-					</a>
-				</li>
-				<li class="nav-item">
-					<a href="#" title="Github">
-						Github
-					</a>
-				</li>
-			</ol>
-		</div>
-		<!--<div class="column">
-			<h4>Helpful Links</h4>
-			<ol>
-				<li class="nav-item">
-					<a href="https://roadmunk.zendesk.com/hc/en-us" title="Help">
-						Help
-					</a>
-				</li>
-				<li class="nav-item">
-					<a href="/security" title="Security">
-						Security
-					</a>
-				</li>
-				<li class="nav-item">
-					<a href="/privacy-policy" title="Privacy Policy">
-						Privacy Policy
-					</a>
-				</li>
-			</ol>
-		</div>-->
-		<div class="column">
-			<h4>Social</h4>
-			<ol>
-				<li class="nav-item">
-					<a href="https://twitter.com/RoadmunkApp" title="Twitter">
-						Twitter
-					</a>
-				</li>
-				<li class="nav-item">
-					<a href="https://plus.google.com/+Roadmunkgoogleplus/" title="Google Plus">
-						Google&#43;
-					</a>
-				</li>
-				<li class="nav-item">
-					<a href="#" title="Facebook">
-						Facebook
-					</a>
-				</li>
-			</ol>
-		</div>
-	</div>
-	<div class="copyright-info">
-		<div class="info-left">
-			&#169;2012&#45;2014 Brent Scheibelhut
-		</div>
-		<div class="info-right">
-			<a href="mailto:brent@scheibelhut.com?Subject=Support%20Case" title="Support">brent&#64;scheibelhut.com</a>
+		<div class="copyright-info">
+			<div class="info-left">
+				&#169;2012&#45;2014 Brent Scheibelhut
+			</div>
+			<div class="info-right">
+				<a href="mailto:brent@scheibelhut.com?Subject=Support%20Case" title="Support">brent&#64;scheibelhut.com</a>
+			</div>
 		</div>
 	</div>
 </footer>
