--- a/public/stylesheets/reset.less
+++ b/public/stylesheets/reset.less
@@ -152,6 +152,10 @@
     margin-left : 15px;
 }
 
+.xxsmall-margin-left {
+    margin-left : 5px;
+}
+
 .small-margin-right {
     margin-right : 30px;
 }
