--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,7 +18,16 @@
         <li><a id="skillsNav" title="Skills" href="#skills">Skills</a></li>
         <li><a id="companiesNav" title="Companies" href="#companies">Companies</a></li>
         <li><a id="testimonialNav" title="Blog" href="#testimonials">Testimonials</a></li>
-         <li><a title="Company" href="#">Other</a></li>
+         <li>
+          <a title="Company" class="dropdown-toggle" data-toggle="dropdown" href="#">Other<span class="caret xxsmall-margin-left"></span></a>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
          <!-- contaact -->
       </ul>
     </div><!-- /.navbar-collapse -->
