--- a/public/stylesheets/home.less
+++ b/public/stylesheets/home.less
@@ -243,6 +243,20 @@
       font-weight : bold;
     }
   }
+
+  //Map
+
+  address {
+    p {
+      margin-bottom: 5px;
+      &:last-child {
+        margin-bottom: 0px;
+      }
+    }
+  }
+  #cd-google-map address {
+    text-align: center;
+  }
 }
 
 
