--- a/views/end.ejs
+++ b/views/end.ejs
@@ -1,4 +1,6 @@
 		<% include ./partials/go-top %> <!-- includes the content variable layout -->
+		<% include ./partials/modal-hire %> <!-- The Hire Me Modal -->
+		<% include ./partials/modal-info %> <!-- The Contact Info Modal -->
 
 		<% include ./partials/footer %> <!-- The footer for the site -->
 	</body>
