--- a/views/home.ejs
+++ b/views/home.ejs
@@ -15,10 +15,10 @@
 					<div class="row landing-ctas">
 						<div class="col-lg-12 small-margin-bottom">
 							<a title="Hire Me" href="#">
-								<button class="cta2 hire blue1"></button>
+								<button class="cta2 hire blue1" data-toggle="modal" data-target="#hireMeModal"></button>
 							</a>
 							<a title="Contact Info" href="#">
-								<button class="cta2 contact blue2 xsmall-margin-left"></button>
+								<button class="cta2 contact blue2 xsmall-margin-left" data-toggle="modal" data-target="#contactInfoModal"></button>
 							</a>
 						</div>
 					</div>
@@ -394,6 +394,16 @@
 				</div>
 			</div>
 		</section>-->
+		<section class="section section-map has-top">
+			<section id="cd-google-map">
+				<div id="google-container"></div>
+				<div id="cd-zoom-in"></div>
+				<div id="cd-zoom-out"></div>
+				<address>
+					<p>Brent Scheibelhut, 42 Wilgar Road, Etobicoke, ON, M8X 1J5</p>
+				</address>
+			</section>
+		</section>
 		<section class="section section-normal yellow has-top">
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
