--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -15,7 +15,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" title="LinkedIn">
+						<a href="http://www.linkedin.com/profile/view?id=259895209" title="LinkedIn">
 							Linked In
 						</a>
 					</li>
@@ -40,7 +40,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" title="Github">
+						<a href="https://github.com/bscheibe" title="Github">
 							Github
 						</a>
 					</li>
@@ -70,17 +70,17 @@
 				<h4>Social</h4>
 				<ol>
 					<li class="nav-item">
-						<a href="https://twitter.com/RoadmunkApp" title="Twitter">
+						<a href="https://twitter.com/4Schybo" title="Twitter">
 							Twitter
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="https://plus.google.com/+Roadmunkgoogleplus/" title="Google Plus">
+						<a href="https://plus.google.com/109561166639292857885" title="Google Plus">
 							Google&#43;
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="#" title="Facebook">
+						<a href="https://www.facebook.com/brent.scheibelhut" title="Facebook">
 							Facebook
 						</a>
 					</li>
