--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -21,11 +21,14 @@
          <li>
           <a title="Company" class="dropdown-toggle" data-toggle="dropdown" href="#">Other<span class="caret xxsmall-margin-left"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="/resume">R&#233;sum&#233;</a></li>
+            <li><a href="/cv">Curriculum Vitae</a></li>
             <li class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">Designs</a></li>
+            <li><a href="http://labs.schybo.com">Apps</a></li>
+            <li><a href="#">Writing</a></li>
+            <li class="divider"></li>
+            <li><a href="#">Athletics</a></li>
           </ul>
         </li>
          <!-- contaact -->
