--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -21,6 +21,9 @@
 
 <% } else if (content == "home") { %>
 
+	<script src="/vendor/customGmaps/js/modernizr.js"></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1Cz0S_E_FPKfChB1Ac_S3Q8xm8ecHi6I"></script>
+	<script src="/vendor/customGmaps/js/main.js"></script>
 	<script src='/vendor/slick.js/slick/slick.min.js'></script>
 	<script src="/javascripts/home.js"></script>
 
