--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -634,6 +634,10 @@ a {
     padding: 45px;
   }
 
+  &.section-map {
+    height : 400px;
+  }
+
   &.section-companies {
     padding : 30px 0 40px 0; 
   }
@@ -789,6 +793,37 @@ a {
     .border-radius(50%);
 }
 
+//Modals
+
+.modal-content {
+  background-color : @secondary-blue;
+  color : @light-font;
+  .modal-header, .modal-footer {
+    border : none;
+  }
+  .modal-header {
+    text-align: center;
+
+    //working but not working
+    .x {
+      color : @light-font;
+    }
+
+    h4 {
+      font-size : 36px;
+    }
+  }
+  .modal-body {
+    font-size: 16px;
+
+    .row {
+      .flex-display();
+      .align-items(center);
+      .justify-content(space-around);
+    }
+  }
+}
+
 
 //RWD for global site
 @media (max-width: 1200px) {
@@ -856,6 +891,15 @@ a {
   }
 }
 
+
+@media (max-width: 1170px) {
+  .section {
+    &.section-map {
+      height: 300px;
+    }
+  }
+}
+
 @media (max-width: 1000px) {
   .go-top {
   	display: none !important;
@@ -895,6 +939,14 @@ a {
       &.get-smaller {
           font-size: 16px;
       }
+  }
+}
+
+@media (max-width: 767px) {
+  .section {
+    &.section-map {
+      height: 200px;
+    }
   }
 }
 
