--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -28,6 +28,7 @@
             <li><a href="http://labs.schybo.com">Apps</a></li>
             <li><a href="#">Writing</a></li>
             <li class="divider"></li>
+            <li><a href="/blog">Blog</a></li>
             <li><a href="#">Athletics</a></li>
           </ul>
         </li>
