--- a/views/partials/modal-info.ejs
+++ b/views/partials/modal-info.ejs
@@ -8,6 +8,9 @@
       </div>
       <div class="modal-body">
         <div class="row">
+          <div class="col-md-6 small-margin-bottom">
+            <img src="/images/imac-map.png" width="300px">
+          </div>
           <div class="col-md-4">
             <p>Brent Scheibelhut</p>
             <p>Cell : 226-600-8322</p>
@@ -15,9 +18,6 @@
             <p>42 Wilgar Road</p>
             <p>Etobicoke, ON</p>
             <p>M8X 1J5</p>
-          </div>
-          <div class="col-md-6">
-            <img src="/images/imac-map.png" width="300px">
           </div>
           <!--<div class="col-md-6 right">
             <section id="cd-google-map">
