--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -7,6 +7,9 @@
 //Global css assets used by all pages
 @import "global";
 
+//Global css assets used by modals
+@import "modals";
+
 //Specific Page CSS
 @import "header";
 @import "footer";
