Temporary Favicon Up

--- a/views/start.ejs
+++ b/views/start.ejs
@@ -2,6 +2,7 @@
 <html itemscope itemtype="http://schema.org/Person" lang="en">
 	<head>
 		<% include ./partials/meta %>
+		<% include ./partials/favicon %>
 		<% include ./partials/stylesheets %>
 	</head>
 
