--- a/views/partials/favicon.ejs
+++ b/views/partials/favicon.ejs
@@ -7,11 +7,11 @@
 <link rel="apple-touch-icon" sizes="120x120" href="/images/favicon/apple-touch-icon-120x120.png">
 <link rel="apple-touch-icon" sizes="76x76" href="/images/favicon/apple-touch-icon-76x76.png">
 <link rel="apple-touch-icon" sizes="152x152" href="/images/favicon/apple-touch-icon-152x152.png">
-<link rel="icon" type="image/png" href="/images/favicon/favicon-196x196.png" sizes="196x196">
+<link rel="icon" type="image/png" href="/images/favicon/favicon-192x192.png" sizes="192x192">
 <link rel="icon" type="image/png" href="/images/favicon/favicon-160x160.png" sizes="160x160">
 <link rel="icon" type="image/png" href="/images/favicon/favicon-96x96.png" sizes="96x96">
 <link rel="icon" type="image/png" href="/images/favicon/favicon-16x16.png" sizes="16x16">
 <link rel="icon" type="image/png" href="/images/favicon/favicon-32x32.png" sizes="32x32">
-<meta name="msapplication-TileColor" content="#f06060">
+<meta name="msapplication-TileColor" content="#ff0000">
 <meta name="msapplication-TileImage" content="/images/favicon/mstile-144x144.png">
 <meta name="msapplication-config" content="/images/favicon/browserconfig.xml">
