Partial completion of athletics page

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -15,6 +15,7 @@
 @import "footer";
 @import "home";
 @import "features";
+@import "athletics";
 @import "pricing";
 @import "pricing-table";
 @import "terms-and-conditions";
