--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -29,7 +29,7 @@
             <li><a href="#">Writing</a></li>
             <li class="divider"></li>
             <li><a href="/blog">Blog</a></li>
-            <li><a href="#">Athletics</a></li>
+            <li><a href="/athletics">Athletics</a></li>
           </ul>
         </li>
          <!-- contaact -->
