--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -7,8 +7,8 @@
 			<div class="row">
 				<div class="col-md-12">
 					<header class="section-header text-center large-margin-bottom">
-						<h1 class="headline text-medium hairline">Roadmunk Blog</h1>
-						<p>All The Latest News and Updates</p>
+						<h1 class="headline text-medium hairline">Brent's Blog</h1>
+						<p>All Brent's Updates, Thoughts, and Stories</p>
 					</header>
 				</div>
 			</div>
