--- a/views/athletics.ejs
+++ b/views/athletics.ejs
@@ -22,554 +22,27 @@
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
-				<header class="section-header small text-center underline">
-					<!-- Why margin not applying it's in reset -->
-					<h1 class="headline text-large hairline medium-margin-bottom">Running</h1>
-				</header>
-				<div class="row">
-					<div class='col-lg-12'>
-						<h2>Outdoor Track</h2>
-						<div class="table-responsive">
-						  <table class="table table-hover table-bordered table-striped">
-						    <thead>
-						      <tr>
-						        <th width='200'>Distance (m)</th>
-						        <th width='150'>Time</th>
-						        <th width='150'>Bodyweight (lb)</th>
-						        <th width='200'>Date</th>
-						        <th width='300'>Comments</th>
-						      </tr>
-						    </thead>
-						    <tbody>
-						      <tr>
-						        <td>800</td>
-						        <td>2:02.56</td>
-						        <td>145</td>
-						        <td>2012</td>
-						        <td>Toronto Metro's</td>
-						      </tr>
-						      <tr>
-						        <td>1500</td>
-						        <td>4:11.31</td>
-						        <td>145</td>
-						        <td>2010</td>
-						        <td>OFSSA (9th)</td>
-						      </tr>
-						      <tr>
-						        <td>3000</td>
-						        <td>9:19.61</td>
-						        <td>145</td>
-						        <td>2010</td>
-						        <td>OFSAA (7th)</td>
-						      </tr>
-						      <tr>
-						        <td>Steeple Chase (2000)</td>
-						        <td>6:38.14</td>
-						        <td>160</td>
-						        <td>2012</td>
-						        <td>Toronto Metro's</td>
-						      </tr>
-						    </tbody>
-						  </table>
-						</div>
-					    <p>
-					      <strong>Source:</strong>
-					      <a href='http://www.athletic.net/TrackAndField/Athlete.aspx?AID=1184958'>Athletics.net</a>
-					    </p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-12">
-						<h2>Indoor Track</h2>
-						<div class="table-responsive">
-							<table class="table table-hover table-bordered table-striped">
-							    <thead>
-							        <tr>
-								        <th width='200'>Distance (m)</th>
-								        <th width='150'>Time</th>
-								        <th width='150'>Bodyweight (lb)</th>
-								        <th width='200'>Date</th>
-								        <th width='300'>Comments</th>
-							      	</tr>
-							    </thead>
-							    <tbody>
-							      	<tr>
-								        <td>800</td>
-								        <td></td>
-								        <td></td>
-								        <td></td>
-								        <td></td>
-							      	</tr>
-							      	<tr>
-								        <td>1500</td>
-								        <td></td>
-								        <td></td>
-								        <td></td>
-								        <td></td>
-							      	</tr>
-							      	<tr>
-								        <td>3000</td>
-								        <td></td>
-								        <td></td>
-								        <td></td>
-								        <td></td>
-							      	</tr>
-							    </tbody>
-							</table>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-12">
-						<h2 class='font'>Road</h2>
-						<div class="table-responsive">
-						  	<table class="table table-hover table-bordered table-striped">
-							    <thead>
-							      	<tr>
-								        <th width='200'>Distance (m)</th>
-								        <th width='150'>Time</th>
-								        <th width='150'>Bodyweight (lb)</th>
-								        <th width='200'>Date</th>
-								        <th width='300'>Comments</th>
-							      	</tr>
-							    </thead>
-							    <tbody>
-							      	<tr>
-								        <td>5000</td>
-								        <td>16:27</td>
-								        <td>160</td>
-								        <td>April 29, 2012</td>
-								        <td>Back's in Motion 5K (1rst)</td>
-							      	</tr>
-							      	<tr>
-								        <td>10000</td>
-								        <td>39:21.5</td>
-								        <td>145</td>
-								        <td>April 26, 2009</td>
-								        <td>Mercedes Benz 10K (Ran with family)</td>
-							      	</tr>
-							    </tbody>
-						  	</table>
-					  	</div>
-					  	<p>
-						    <strong>Source:</strong>
-						    <a href='http://www.roadraceresults.com/find-a-runner-road-race-results-search.php?first=Brent&amp;last=Scheibelhut'>Road Race Results</a>
-					  	</p>
-					</div>
-				</div>
-					<div class="row">
-						<div class="col-lg-12">
-							<h2>Cross Country</h2>
-							<div class="table-responsive">
-						  		<table class="table table-hover table-bordered table-striped">
-								    <thead>
-								      	<tr>
-									        <th>Distance (m)</th>
-									        <th>Time</th>
-									        <th>Bodyweight (lb)</th>
-									        <th>Date</th>
-									        <th>Comments</th>
-								      	</tr>
-								    </thead>
-								    <tbody>
-								      	<tr>
-									        <td>5000</td>
-									        <td>17:04.7</td>
-									        <td>145</td>
-									        <td>November 1, 2009</td>
-									        <td>OFSAA (10th)</td>
-								      	</tr>
-								    </tbody>
-						  		</table>
-						  	</div>
-						  	<p>
-							    <strong>Source:</strong>
-							    <a href='http://www.sportstats.ca/searchResults.xhtml?firstname=Brent&amp;lastname=SCHEIBELHUT'>Sports Stats</a>
-						  	</p>
-						</div>
-					</div>
-				</div>
+				<% include ./partials/athletics/running %>
 			</div>
 		</section>
 		<section class="section section-normal has-top">
+			<div class="decor-top">
+				<% include ./partials/top-round-angle %>
+			</div>
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
-				<header class="section-header small text-center underline">
-					<h1 class="headline text-large hairline medium-margin-bottom">Lifting</h1>
-				</header>
-				<div class="row">
-					<div class="col-lg-12">
-						<h2>All Time Lifting Records</h2>
-						<div class="responsive-table">
-							<table class="table table-hover table-bordered table-striped">
-							  	<thead>
-							    	<tr>
-								      <th width='300'>Exercise</th>
-								      <th width='150'>Weight (lb)</th>
-								      <th width='150'>Reps x Sets</th>
-								      <th width='150'>Bodyweight (lb)</th>
-								      <th width='300'>Date</th>
-							    	</tr>
-							  	</thead>
-							  	<tbody>
-							    	<tr>
-								        <td>Bench Press</td>
-								        <td>225</td>
-								        <td>3 RPM</td>
-								        <td>183</td>
-								        <td>October, 2013</td>
-							    	</tr>
-							    	<tr>
-								        <td>Pull Ups</td>
-								        <td>183 + 40</td>
-								        <td>4 x 4</td>
-								        <td>183</td>
-								        <td>October 2013</td>
-							    	</tr>
-							    	<tr>
-								        <td>Squat</td>
-								        <td>205</td>
-								        <td>7 RMP</td>
-								        <td>165</td>
-								      <td>April, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Deadlift</td>
-							      		<td>255</td>
-							      		<td>5 RMP</td>
-							      		<td>183</td>
-							      		<td>October, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>OHP</td>
-							      		<td>125</td>
-							      		<td>5 RMP</td>
-							      		<td>175</td>
-							      		<td>November, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Incline Bench</td>
-							      		<td>165</td>
-							      		<td>4 x 3</td>
-							      		<td>175</td>
-							      		<td>November, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Chest Flys</td>
-							      		<td>65 x 2</td>
-							      		<td>5 x 3</td>
-							      		<td>175</td>
-							      		<td>November, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Back Barbell Rows</td>
-							      		<td>145</td>
-							      		<td>4 x 4</td>
-							      		<td>175</td>
-							      		<td>November, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Back Dumbell Row</td>
-							      		<td>75</td>
-							      		<td>10 x 2</td>
-							      		<td>175</td>
-							      		<td>November, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Dumbell Shoulder Press</td>
-							      		<td>60 x 2</td>
-							      		<td>7 x 3</td>
-							      		<td>183</td>
-							      		<td>October, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Skullcrushers</td>
-							      		<td>50 x 2</td>
-							      		<td>8 x 2</td>
-							      		<td>183</td>
-							      		<td>October, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Cable Chest Flys</td>
-							      		<td>25 x 2</td>
-							      		<td>10 x 2</td>
-							      		<td>175</td>
-							      		<td>November, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Dumbell Bicep Curl</td>
-							      		<td>45 x 2</td>
-							      		<td>8 RMP</td>
-							      		<td>183</td>
-							      		<td>October, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Shrugs</td>
-							      		<td>90 x 2</td>
-							      		<td>10 x 2</td>
-							      		<td>183</td>
-							      		<td>October, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Hammer Curls</td>
-							      		<td>35 x 2</td>
-							      		<td>8 x 2</td>
-							      		<td>183</td>
-							      		<td>October, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Core Curls</td>
-							      		<td>35</td>
-							      		<td>N/A</td>
-							      		<td>165</td>
-							      		<td>April, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Lateral Raises</td>
-							      		<td>25 x 2</td>
-							      		<td>10 x 3</td>
-							      		<td>175</td>
-							      		<td>November, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>T-Bar Rows</td>
-							      		<td>Bar + 85</td>
-							      		<td>5 x 4</td>
-							      		<td>175</td>
-							      		<td>November, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Chest Dips</td>
-							      		<td>183 + 45</td>
-							      		<td>5 x 3</td>
-							      		<td>183</td>
-							      		<td>October, 2013</td>
-							    	</tr>
-							    	<tr>
-							      		<td>Tricep Dips</td>
-							      		<td>183 + 45</td>
-							      		<td>7 x 3</td>
-							      		<td>183</td>
-							      		<td>October, 2013</td>
-							    	</tr>
-							  	</tbody>
-							</table>
-						</div>
-					</div>
-				</div>
+				<% include ./partials/athletics/lifting %>
 			</div>
 		</section>
 		<section class="section section-normal has-top">
+			<div class="decor-top">
+				<% include ./partials/top-round-angle %>
+			</div>
 			<div class="background-media"></div>
 			<div class="background-overlay"></div>
 			<div class="container">
-				<header class="section-header small text-center underline">
-					<h1 class="headline text-large hairline small-margin-bottom">Swimming</h1>
-				</header>
-				<div class="row">
-					<div class="col-lg-12">
-						<h3>Freestyle</h3>
-						<div class="responsive-table">
-							<table class="table table-hover table-bordered table-striped">
-							    <thead>
-							        <tr>
-								        <th>Distance (m)</th>
-								        <th>Time</th>
-								        <th>Date</th>
-								        <th>Comments</th>
-							        </tr>
-							    </thead>
-							    <tbody>
-							        <tr>
-								        <td>50m</td>
-								        <td>25.73</td>
-								        <td>December, 2011</td>
-								        <td>Secondary School Meet</td>
-							        </tr>
-							      	<tr>
-							        	<td>100m</td>
-							        	<td>58.27</td>
-							        	<td>December, 2011</td>
-							        	<td>Secondary School Meet</td>
-							      	</tr>
-							      	<tr>
-							        	<td>200m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							      	<tr>
-							        	<td>400m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							      	<tr>
-							        	<td>800m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							      	<tr>
-							        	<td>1500m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							    </tbody>
-							</table>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-12">
-						<h3>Backstroke</h3>
-						<div class="responsive-table">
-							<table class="table table-hover table-bordered table-striped">
-							    <thead>
-							      	<tr>
-								        <th>Distance (m)</th>
-								        <th>Time</th>
-								        <th>Date</th>
-								        <th>Comments</th>
-							      	</tr>
-							    </thead>
-							    <tbody>
-							      	<tr>
-								        <td>50m</td>
-								        <td></td>
-								        <td></td>
-								        <td></td>
-							      	</tr>
-							      	<tr>
-								        <td>100m</td>
-								        <td></td>
-								        <td></td>
-								        <td></td>
-							      	</tr>
-							      	<tr>
-								        <td>200m</td>
-								        <td></td>
-								        <td></td>
-								        <td></td>
-							      	</tr>
-							    </tbody>
-							</table>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-12">
-						<h3 class='font'>Breaststroke</h3>
-						<div class="responsive-table">
-							<table class="table table-hover table-bordered table-striped">
-							    <thead>
-							      	<tr>
-								        <th>Distance (m)</th>
-								        <th>Time</th>
-								        <th>Date</th>
-								        <th>Comments</th>
-							      	</tr>
-							    </thead>
-							    <tbody>
-							      	<tr>
-							        	<td>50m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							      	<tr>
-							        	<td>100m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							      	<tr>
-							        	<td>200m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							  	</tbody>
-							</table>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-12">
-						<h3 class='font'>Butterfly</h3>
-						<div class="responsive-table">
-							<table class="table table-hover table-bordered table-striped">
-							    <thead>
-							      	<tr>
-							        <th width='300'>Distance (m)</th>
-							        <th width='150'>Time</th>
-							        <th width='300'>Date</th>
-							        <th width='300'>Comments</th>
-							      	</tr>
-							    </thead>
-							    <tbody>
-							      	<tr>
-							        	<td>50m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							      	<tr>
-							        	<td>100m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							      	<tr>
-							        	<td>200m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							    </tbody>
-							</table>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-lg-12">
-						<h3 class='font'>Individual Medley</h3>
-						<div class="responsive-table">
-							<table class="table table-hover table-bordered table-striped">
-							    <thead>
-							      	<tr>
-								        <th>Distance (m)</th>
-								        <th>Time</th>
-								        <th>Date</th>
-								        <th>Comments</th>
-							      	</tr>
-							    </thead>
-							    <tbody>
-							      	<tr>
-							        	<td>100m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							      	<tr>
-							        	<td>200m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							      	<tr>
-							        	<td>400m</td>
-							        	<td></td>
-							        	<td></td>
-							        	<td></td>
-							      	</tr>
-							    </tbody>
-							</table>
-						</div>
-					</div>
-				</div>
+				<% include ./partials/athletics/swimming %>
 			</div>
 		</section>
 	</article>
