--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -16,6 +16,7 @@
 @import "home";
 @import "features";
 @import "athletics";
+@import "designs";
 @import "pricing";
 @import "pricing-table";
 @import "terms-and-conditions";
