--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,18 +15,18 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a id="skillsNav" title="Skills" href="#skills">Skills</a></li>
-        <li><a id="companiesNav" title="Companies" href="#companies">Companies</a></li>
-        <li><a id="testimonialNav" title="Blog" href="#testimonials">Testimonials</a></li>
+        <li class="home-page-only"><a id="skillsNav" title="Skills" href="#skills">Skills</a></li>
+        <li class="home-page-only"><a id="companiesNav" title="Companies" href="#companies">Companies</a></li>
+        <li class="home-page-only"><a id="testimonialNav" title="Blog" href="#testimonials">Testimonials</a></li>
          <li>
           <a title="Company" class="dropdown-toggle" data-toggle="dropdown" href="#">Other<span class="caret xxsmall-margin-left"></span></a>
           <ul class="dropdown-menu" role="menu">
             <li><a href="/resume">R&#233;sum&#233;</a></li>
             <li><a href="/cv">Curriculum Vitae</a></li>
             <li class="divider"></li>
-            <li><a href="#">Designs</a></li>
+            <li><a href="/designs">Designs</a></li>
             <li><a href="http://labs.schybo.com">Apps</a></li>
-            <li><a href="#">Writing</a></li>
+            <li><a href="/writing">Writing</a></li>
             <li class="divider"></li>
             <li><a href="/blog">Blog</a></li>
             <li><a href="/athletics">Athletics</a></li>
