--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -21,6 +21,14 @@
 	<script src="/javascripts/blog.js"></script>
 	<script src="/javascripts/popups.js"></script>
 
+<% } else if (content == "writing") { %>
+
+	<script src="/javascripts/writing.js"></script>
+
+<% } else if (content == "designs") { %>
+
+	<script src="/javascripts/designs.js"></script>
+
 <% } else if (content == "home") { %>
 
 	<script src="/vendor/customGmaps/js/modernizr.js"></script>
