About ready to do initial release

--- a/public/stylesheets/cross-browser.less
+++ b/public/stylesheets/cross-browser.less
@@ -52,6 +52,22 @@
   box-shadow         : @value;
 }
 
+.perspective(@value) {
+  -webkit-perspective : @value;
+  -moz-perspective    : @value;
+  -ms-perspective     : @value;
+  -o-perspective      : @value;
+  perspective         : @value;
+}
+
+.transform-style(@value) {
+  -webkit-transform-style : @value;
+  -moz-transform-style    : @value;
+  -ms-transform-style     : @value;
+  -o-transform-style      : @value;
+  transform-style         : @value;
+}
+
 .transition(@value) {
 	-webkit-transition : @value;
 	   -moz-transition : @value;
