--- a/public/stylesheets/global.less
+++ b/public/stylesheets/global.less
@@ -225,19 +225,25 @@ a {
   }
 
   &.old-website1 {
-    padding : 15px;
+    padding : 100px 40px;
     border : none;
     .border-radius(50%);
   }
 
-  &.old-website2 {
+  &.rotate {
+    padding : 10px 25px;
+    border: none;
+    .border-radius(5px);
+  }
+
+  /*&.old-website2 {
     padding : 15px 30px;
     border : none;
     .border-radius(7px);
     &:before {
       content : "Website";
     }
-  }
+  }*/
 
   &.subscribe {
     padding    : 10px 25px;
