--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -28,20 +28,20 @@
 						<a href="/pricing" title="Pricing">
 							Pricing
 						</a>
-					</li>-->
+					</li>-->		
 					<li class="nav-item">
-						<a href="#" title="Style Guide">
-							Style Guide
-						</a>
-					</li>
-					<li class="nav-item">
-						<a href="#" title="Dribbble">
+						<a href="https://dribbble.com/Schybo" title="Dribbble">
 							Dribbble
 						</a>
 					</li>
 					<li class="nav-item">
 						<a href="https://github.com/bscheibe" title="Github">
 							Github
+						</a>
+					</li>
+					<li class="nav-item">
+						<a href="#" title="Style Guide">
+							&nbsp;
 						</a>
 					</li>
 				</ol>
