--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -29,6 +29,10 @@
 
 	<script src="/javascripts/designs.js"></script>
 
+<% } else if (content == "athletics") { %>
+
+	<script src="/javascripts/athletics.js"></script>
+
 <% } else if (content == "home") { %>
 
 	<script src="/vendor/customGmaps/js/modernizr.js"></script>
