--- a/public/stylesheets/designs.less
+++ b/public/stylesheets/designs.less
@@ -1,7 +1,110 @@
-.design-page {
+.designs-page {
 	.old-website-buttons {
 		.flex-display();
 		.align-items(center);
 		.justify-content(space-around)
+	}
+
+	.rotate-buttons {
+	  .flex-display();
+	  .align-items(center);
+	  .justify-content(space-between);
+	}
+}
+
+
+@border-color : @steel-lightest;
+
+.designs-page .container {
+	img {
+		border: 1px solid @border-color;
+		opacity: 0.75;
+		vertical-align : top;
+	}
+	.features-text-right {
+		text-align: right;
+	}
+	.features-text-left {
+		text-align: left;
+	}
+
+	.features-right {
+		float: right;
+	}
+}
+
+//Styling for cool cube
+figure {
+  margin: 0;
+}
+.cube-container {
+  width: 350px;
+  height: 350px;
+  position: relative;
+  .perspective(1000px);
+}
+
+#cube {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  .transform-style(preserve-3d);
+}
+
+#cube figure {
+  width: 350px;
+  height: 350px;
+  display: block;
+  position: absolute;
+  //border: 2px solid black;
+  line-height: 346px;
+  font-size: 260px;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+}
+
+#cube .front1  { .transform(rotateY(  0deg)); background: hsla( 0, 100%, 50%, 0.7 ); }
+#cube .back1  { .transform(rotateX(180deg)); background: hsla( 60, 100%, 50%, 0.7 );}
+#cube .right  { .transform(rotateY( 90deg)); background: hsla( 120, 100%, 50%, 0.7 );}
+#cube .left   { .transform(rotateY(-90deg)); background: hsla( 180, 100%, 50%, 0.7 );}
+#cube .top    { .transform(rotateX( 90deg)); background: hsla( 240, 100%, 50%, 0.7 );}
+#cube .bottom { .transform(rotateX(-90deg)); background: hsla( 300, 100%, 50%, 0.7 );}
+
+#cube .front1  { .transform(rotateY(  0deg) translateZ(175px)); }
+#cube .back1   { .transform(rotateX(180deg) translateZ(175px)); }
+#cube .right  { .transform(rotateY( 90deg) translateZ(175px)); }
+#cube .left   { .transform(rotateY(-90deg) translateZ(175px)); }
+#cube .top    { .transform(rotateX( 90deg) translateZ(175px)); }
+#cube .bottom { .transform(rotateX(-90deg) translateZ(175px)); }
+
+#cube { .transform(translateZ(-100px)); }
+
+#cube.show-front  { .transform(translateZ(-175px) rotateY(   0deg)); }
+#cube.show-back   { .transform(translateZ(-175px) rotateX(-180deg)); }
+#cube.show-right  { .transform(translateZ(-175px) rotateY( -90deg)); }
+#cube.show-left   { .transform(translateZ(-175px) rotateY(  90deg)); }
+#cube.show-top    { .transform(translateZ(-175px) rotateX( -90deg)); }
+#cube.show-bottom { .transform(translateZ(-175px) rotateX(  90deg)); }
+
+#cube { .transition(all 1s); }
+
+@media only screen and (max-width: 1000px) {
+	.designs-page {
+		.container {
+			.features-text-right,
+			.features-text-left {
+				text-align: center;
+			}
+			.features-right {
+				float: none;
+			}
+			.body-subheader {
+				font-size: 14px;
+			}
+		}
+		h4 {
+			font-size: 16px;
+		}
 	}
 }
