Fixed a couple of small things

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,7 +10,7 @@
 						</a>
 					</li>
 					<li class="nav-item">
-						<a href="/company" title="Contact Us">
+						<a href="" title="Contact Us" data-toggle="modal" data-target="#contactInfoModal">
 							Contact
 						</a>
 					</li>
