--- a/views/partials/meta.ejs
+++ b/views/partials/meta.ejs
@@ -15,14 +15,27 @@
 <!-- Open Graph data --> 
 <meta property="og:title" content="<%= title %>" /> 
 <meta property="og:type" content="website" /> 
-<meta property="og:url" content=" http://roadmunk.com/" />
-<meta property="og:image" content="/images/macbook-header-live.png" />
+<meta property="og:url" content="http://brentscheibelhut.com/" />
+<meta property="og:image" content="/images/macbook-header.png" />
+<meta content='500' property='og:image:width' />
+<meta content='500' property='og:image:height' />
 <meta property="og:description" content="<%= description %>" /> 
-<meta property="og:site_name" content="Roadmunk" />
+<meta property="og:site_name" content="Brent Scheibelhut" />
+<meta content='<%= description %>' name='description' />
+<meta content='Brent, Scheibelhut, Design, Freelance, Hack, Code, Artist, Writer, Athlete' name='keywords' />
 <!--<meta property="fb:admins" content="Facebook numberic ID" />--> <!-- If we get a facebook page place ID here -->
 
+<!-- Other META -->
+<link href='/images/macbook-header.png' rel='image_src' />
+<meta content='en_US' property='og:locale' />
+<meta content='brent.scheibelhut' property='fb:admins' />
+<meta content='6FC60D74B6B0FBE7265A16F5322EC1AB' name='msvalidate.01' />
+<!-- %meta{content: "141249602711680", property: "fb:app_id"}/ -->
+<!-- %meta{content: "9ECTySi0_GeTCfDZNmBXsehQoiCybex4metxiksLcRc", name: "google-site-verification"}/ -->
+<link href='https://plus.google.com/109561166639292857885' rel='publisher' />
+
 <!-- Twitter Card data --> 
-<meta name="twitter:card" content="summart_large_image"> 
+<meta name="twitter:card" content="summary_large_image"> 
 <meta name="twitter:site" content="@roadmunkapp"> 
 <meta name="twitter:title" content="<%= title %>"> 
 <meta name="twitter:description" content="<%= description %>"> 
