--- a/views/partials/scripts.ejs
+++ b/views/partials/scripts.ejs
@@ -7,7 +7,7 @@
 <% if (content == "company") { %>
 	<script>$('#companyNav').addClass('on');</script>
 	<script src="/vendor/customGmaps/js/modernizr.js"></script>
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ81ILn9i65wubHrnCJR2q5iIV6k7b4LA" async></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQ81ILn9i65wubHrnCJR2q5iIV6k7b4LA" ></script>
 	<script src="/vendor/customGmaps/js/main.js"></script>
 <% } %>
 
