Fixed Old Website Link

--- a/views/designs.ejs
+++ b/views/designs.ejs
@@ -100,7 +100,7 @@
 						<a title="Old Website" href="http://brentscheibelhut.com">
 							<button class="cta2 old-website2 red"></button>
 						</a>-->
-						<a title="Old Website" href="http://brentscheibelhut.com">
+						<a title="Old Website" href="http://brentscheibelhut-com.herokuapp.com/">
 							<button class="cta2 old-website1 red">Go To Old Website</button>
 						</a>
 					</div>
