Added correct google validation

--- a/views/partials/meta.ejs
+++ b/views/partials/meta.ejs
@@ -29,7 +29,6 @@
 <link href='/images/macbook-header.png' rel='image_src' />
 <meta content='en_US' property='og:locale' />
 <meta content='brent.scheibelhut' property='fb:admins' />
-<meta content='6FC60D74B6B0FBE7265A16F5322EC1AB' name='msvalidate.01' />
 <!-- %meta{content: "141249602711680", property: "fb:app_id"}/ -->
 <!-- %meta{content: "9ECTySi0_GeTCfDZNmBXsehQoiCybex4metxiksLcRc", name: "google-site-verification"}/ -->
 <link href='https://plus.google.com/109561166639292857885' rel='publisher' />
@@ -48,10 +47,10 @@
 
 
 <!-- Google Webmaster Tools Site Verification -->
-<meta name="google-site-verification" content="nzLNaEA5MdfrWobfulEXwk5ITa91r0vLbv310WIWw8w" />
+<meta name="google-site-verification" content="io9BTDf04M3fT1HRH317jbXLicBXZjXtMBE0nb3zl4o" />
 
 <!-- Bing and Yahoo Webmaster Tools Site Verification -->
-<meta name="msvalidate.01" content="265FEA508A77F04EA22701FB2AC5A915" />
+<meta content='6FC60D74B6B0FBE7265A16F5322EC1AB' name='msvalidate.01' /> />
 
 <!-- Google Authorship and Publisher Markup --> 
 <link rel="author" href="https://plus.google.com/+Roadmunkgoogleplus/posts"/>
